--- a/apps/web/.env
+++ b/apps/web/.env
@@ -10,8 +10,8 @@ NEXT_PUBLIC_PRODUCT_NAME=Makerkit
 NEXT_PUBLIC_SITE_TITLE="Makerkit - The easiest way to build and manage your SaaS"
 NEXT_PUBLIC_SITE_DESCRIPTION="Makerkit is the easiest way to build and manage your SaaS. It provides you with the tools you need to build your SaaS, without the hassle of building it from scratch."
 NEXT_PUBLIC_DEFAULT_THEME_MODE=light
-NEXT_PUBLIC_THEME_COLOR="#ffffff"
-NEXT_PUBLIC_THEME_COLOR_DARK="#0a0a0a"
+NEXT_PUBLIC_THEME_COLOR="#f8f8f8"
+NEXT_PUBLIC_THEME_COLOR_DARK="#000000"
 
 # AUTH
 NEXT_PUBLIC_AUTH_PASSWORD=true
