--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,19 +46,25 @@
     "@supabase/supabase-js": "2.75.0",
     "@tanstack/react-query": "5.90.2",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.13.1",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-sitemap": "^4.2.3",
     "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
     "react-i18next": "^16.0.0",
     "recharts": "2.15.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.32"
+    "xlsx": "^0.18.5",
+    "zod": "^3.25.32",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@kit/eslint-config": "workspace:*",
